--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
         <div class="gal-box-1">
           <h2>Land Rover</h2>
           <h4>2019 - Range Rover Velar</h4>
-          <img src="pump-icon.svg" alt="" class="pump">
+<!--           <img src="pump-icon.svg" alt="" class="pump">
           <img src="line-graph-icon.svg" alt="" class="line">
-          <img src="gauge-icon.svg" alt="" class="gg">
+          <img src="gauge-icon.svg" alt="" class="gg"> -->
           <p class="mpg">MPG  |   <b>19/24</b></p>
           <p class="hp">HP    | <b>397</b></p>
           <p class="vitesse">0-60   |  <b>4.2</b></p>
