--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
         <div class="gal-box-3">
           <h2>Porche</h2>
           <h4>2019 - 911 Carrera S</h4>
-          <img src="pump-icon.svg" alt="" class="pump-2">
+<!--           <img src="pump-icon.svg" alt="" class="pump-2">
           <img src="line-graph-icon.svg" alt="" class="line-2">
-          <img src="gauge-icon.svg" alt="" class="gg-2">
+          <img src="gauge-icon.svg" alt="" class="gg-2"> -->
           <p class="mpg-2">MPG  |   <b>19/24</b></p>
           <p class="hp-2">HP    | <b>443</b></p>
           <p class="vitesse-2">0-60   |  <b>3.2</b></p>
